# otus_c_plus_hw13

./: .gitignore  README.md
.github/workflows/: run_hw13.yml
hm13/: CMakeLists.txt  CMakePresets.json  main.cpp  version.h.in
hm13/src/: accuracyHelper.cpp  accuracyHelper.hpp  classifier.h  mlp_classifier.cpp  mlp_classifier.h  utils.cpp  utils.hpp
hm13/test/: CMakeLists.txt  main.cpp  test.cpp
